L28: Format the header

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,6 +4,16 @@
 {%  include 'recipes/partials/head.html' %}
 
 <body>
-    <h1><i class="fa-solid fa-utensils"></i> Recipes {{ name }}</h1>
+    <header class="main-header-container">
+        <div class="main-header container">
+            <h1>
+                <a href="/">
+                    <h1><i class="fa-solid fa-utensils"></i> 
+                    <span>Recipes {{ name }}</span>
+                </a>
+            </h1>
+        </div>
+    </header>
 </body>
+
 </html>
