--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -7,9 +7,9 @@
     <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="/">
-                    <h1><i class="fa-solid fa-utensils"></i> 
-                    <span>Recipes {{ name }}</span>
+                <a class="main-logo" href="/">
+                    <i class="fas fa-utensils main-logo-icon"></i>
+                    <span class="main-logo-text">Recipes</span>
                 </a>
             </h1>
         </div>
