--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -5,15 +5,11 @@
 
 <body>
     {% include "recipes/partials/header.html" %}
+    {% include "recipes/partials/search.html" %}
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+        </main>
 
-    <div class="search-container">
-        <div class="container">
-            <form action="" class="search-form">
-                <input type="search" class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
-        </div>
-        
 </body>
 
 
