--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -8,6 +8,12 @@
     {% include "recipes/partials/search.html" %}
     <main class="main-content-container">
         <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
+                </div>
+                <h1>Oi</h1>
+            </div>
         </main>
 
 </body>
