--- a/recipes/static/recipes/css/style.css
+++ b/recipes/static/recipes/css/style.css
@@ -148,6 +148,12 @@
     padding: var(--spacing-gutter-medium);
     padding-bottom: 2rem;
   }
+
+  .recipe-title-container a {
+    text-decoration: none;
+    color: var(--color-primary-dark);
+  }
+  
   .recipe-author {
     padding: 0 var(--spacing-gutter-medium);
   }
@@ -209,7 +215,7 @@
   .preparation-steps {
     padding: var(--spacing-gutter-medium);
   }
-  
+
   .main-footer {
     display: flex;
     align-items: center;
