--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -3,6 +3,7 @@
         <h1>
             <a class="main-logo" href="/">
                 <i class="fas fa-utensils main-logo-icon"></i>
+                Recipes
                 <a class="main-logo" href="{% url 'recipes:home' %}">
             </a>
         </h1>
