--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,11 @@
 <div class="recipe recipe-list-item">
+    {% if recipe.cover %}
     <div class="recipe-cover">
         <a href="{% url 'recipes:recipe' recipe.id %}">
             <img src="{{ recipe.cover.url }}" alt="Temporário">
         </a>
     </div>
+    {% endif %}
     <div class="recipe-title-container">
         <h2 class="recipe-title">
             <a href="{% url 'recipes:recipe' recipe.id %}">
@@ -15,14 +17,18 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
+            {% if recipe.author.first_name %}
             {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+        {% else %}
+            {{ recipe.author.username }}
+        {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
         <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
+            <a href="{% url 'recipes:category' recipe.category.id %}">
                 <i class="fas fa-layer-group"></i>
                 <span>{{ recipe.category.name }}</span>
             </a>
@@ -53,15 +59,15 @@
     {% if is_detail_page is not True %}
     <footer class="recipe-footer">
         <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.id %}">
-        <i class="fas fa-eye"></i>
-                <span>ver mais...</span>
-            </a>
-        </footer>
+            <i class="fas fa-eye"></i>
+            <span>ver mais...</span>
+        </a>
+    </footer>
     {% endif %}
 
     {% if is_detail_page is True %}
-        <div class="preparation-steps">
-            {{ recipe.preparation_steps|linebreaksbr }}
-        </div>
+    <div class="preparation-steps">
+        {{ recipe.preparation_steps|linebreaksbr }}
+    </div>
     {% endif %}
 </div>
