--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -15,24 +15,31 @@
     </div>
 
     <div class="recipe-author">
+
+        {% if recipe.author is not None %}
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
             {% if recipe.author.first_name %}
             {{ recipe.author.first_name }} {{ recipe.author.last_name }}
-        {% else %}
+            {% else %}
             {{ recipe.author.username }}
-        {% endif %}
+            {% endif %}
         </span>
+        {% endif %}
+
+
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
+        {% if recipe.category is not None %}
         <span class="recipe-author-item">
             <a href="{% url 'recipes:category' recipe.category.id %}">
                 <i class="fas fa-layer-group"></i>
                 <span>{{ recipe.category.name }}</span>
             </a>
         </span>
+        {% endif %}
     </div>
 
     <div class="recipe-content">
